--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
     "morgan": "~1.9.1",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "babel-loader": "^8.1.0",
+    "babel-minify-webpack-plugin": "^0.3.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   }
 }
