--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
-    "build": "webpack -w"
+    "build": "webpack -w",
+    "webapp:dev": "concurrently 'npm:build' 'npm:dev'",
+    "webapp:start": "concurrently 'npm:build' 'npm:start'"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -23,6 +25,7 @@
     "autoprefixer": "^9.8.4",
     "babel-loader": "^8.1.0",
     "babel-minify-webpack-plugin": "^0.3.1",
+    "concurrently": "^5.2.0",
     "css-loader": "^3.6.0",
     "cssnano": "^4.1.10",
     "mini-css-extract-plugin": "^0.9.0",
